[package]
name = "l1sload"
version = "0.0.0"
edition = "2021"
description = "RIP-7728 implementation"
rust-version = "1.81"
authors = ["0xurb"]

[dependencies]
revm = { git = "https://github.com/bluealloy/revm", branch = "release/v45", features = [
    "optimism",
] }
smallvec = "1.13.2"
tokio = { version = "1.40", features = ["rt", "rt_multi_thread", "macros"] }

[dev-dependencies]
alloy = { version = "0.4.2", features = ["providers", "sol-types"] }
eyre = "0.6.12"

[[test]]
name = "call"
path = "tests/call.rs"
