[package]
name = "l1sload"
version = "0.0.0"
edition = "2021"
description = "RIP-7728 implementation"
rust-version = "1.81"
authors = ["0xurb"]

[dependencies]
alloy = { version = "0.4.2", features = ["providers", "sol-types"] }
futures = "0.3.31"
revm = { git = "https://github.com/bluealloy/revm", branch = "release/v45", features = [
    "optimism",
] }
smallvec = "1.13.2"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"

[dev-dependencies]
eyre = "0.6.12"

[[test]]
name = "call"
path = "tests/call.rs"
